# mcp-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  crawled_examples.json  demo.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: c7d280d32c9e_initial_schema_chat_sessions_and_chat_.py
app/: main.py
app/core/: agent.py
app/db/: crud.py  database.py  models.py
app/schemas/: chat.py
app/utils/: config.py  logger.py  serializer.py
rspile-scripts-server/: rspile-nano-server.py
rspile-scripts-server/ExampleCode/: BoredPile.rspile2  DrivenPile.rspile2  ExampleModel.rspile2  HelicalPile.rspile2  LatAxPileAnalysis.rspile2  PrestressedConcreteSection.rspile2  SoilStrengthAnalysis.rspile2
rspile-scripts-server/crawl_code/: crawl_website.py  crawled_json_to_scripts.py  install_example_code_assets.py
rspile-scripts-server/rspile_scripts_python/: model_model.py  model_modeler.py  pile_sections_bored_pile_section.py  pile_sections_driven_pile_section.py  pile_sections_helical_pile_section.py  pile_sections_pile_analysis_pile_section.py  pile_sections_prestressed_concrete_section.py  pile_types_bored_pile_type.py  pile_types_driven_pile_type.py  pile_types_helical_pile_type.py  pile_types_pile_analysis_pile_type.py  results_analysis_c_phi_sensitivity_analysis.py  results_analysis_pile_analysis_data_analysis.py  soil_axial_pile_analysis_soil_property.py  soil_bored_soil_property.py  soil_driven_soil_property.py  soil_helical_soil_property.py  soil_lateral_pile_analysis_soil_property.py  soil_soil_property.py
scripts/: README.md  chat.sh  test.sh
simple-mcp-server-demo/: client.py  client_v2.py  mcp_client.py  mcp_server.py  simple_operators.py
tests/: conftest.py
tests/integration/: test_chat_persistence.py
tests/unit/: test_chat_sse.py
(+24 files in other folders)
